Subpixel antialiasing for text can't be turned off when WebRender is enabled
Categories
(Core :: Graphics: WebRender, defect, P2)
Tracking
()
People
(Reporter: hujq, Assigned: lsalzman)
References
Details
Attachments
(2 files)
325.90 KB,
image/png
|
Details | |
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
With WebRender enabled by gfx.webrender.all, try to turn off subpixel antialiasing for text by:
- ClearType Text Tuner of Windows, choosing the third option at the third step,
OR
- Set gfx.font_rendering.cleartype_params.cleartype_level to 0 in about:config.
Actual results:
Text is still rendered with subpixel antialiasing.
Expected results:
With WebRender disabled, either of these methods will make Firefox use grayscale antialiasing instead of subpixel.
Updated•6 years ago
|
Assignee | ||
Comment 2•6 years ago
|
||
Updated•6 years ago
|
Updated•6 years ago
|
![]() |
||
Comment 4•6 years ago
|
||
bugherder |
Comment 5•6 years ago
|
||
This probably warrants uplifting to 67 (I presume it is affected, didn't test). Lee, if you agree, can you request uplift?
Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 9058366 [details]
Bug 1544188 - check cleartype level for WR DWrite fonts. r?jfkthame
Beta/Release Uplift Approval Request
- User impact if declined: WebRender users who have disabled ClearType (subpixel anti-aliasing) via the Windows font tuner will still see ClearType enabled, as the ClearType settings won't be properly respected.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just checks an OS setting for font rendering when WebRender is enabled that shouldn't affect most users.
- String changes made/needed:
Comment 7•6 years ago
|
||
Comment on attachment 9058366 [details]
Bug 1544188 - check cleartype level for WR DWrite fonts. r?jfkthame
Low-risk targeted fix for webrender on Windows, uplift approved for 67 beta 13, thanks.
Comment 8•6 years ago
|
||
bugherder uplift |
Description
•