Bug 1544188 - check cleartype level for WR DWrite fonts. r=jfkthame a=pascalc

Reviewers: jfkthame

Reviewed By: jfkthame

Bug #: 1544188

Differential Revision: https://phabricator.services.mozilla.com/D27563